<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/InnerRelativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <com.android.tfc.englishtrainingday.views.ExerciseViewPager
        android:id="@+id/pager_exercise"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/button_mark_exercise"
        android:layout_width="@dimen/button_round_size"
        android:layout_height="@dimen/button_round_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:background="@drawable/shadow_button_mark"
        android:padding="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_action_mark"
        android:textColor="@color/button_text"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/text_exercises_left_margin"
        android:textSize="@dimen/textsize_item" />

    <RelativeLayout
        android:id="@+id/div_exercise_ok"
        android:layout_width="@dimen/tipBox_width"
        android:layout_height="@dimen/tipBox_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shadow_message_success"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txtSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/tipBox_margin"
            android:text="@string/title_exercise_well_done"
            android:textColor="@color/success"
            android:textSize="@dimen/textsize_item_L"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_tip_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSuccess"
            android:layout_marginLeft="@dimen/tipBox_margin"
            android:textColor="@color/text_success"
            android:textSize="@dimen/textsize_item" />

        <Button
            android:id="@+id/button_next_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/tipBox_margin"
            android:background="@drawable/shadow_button_message"
            android:text="@string/button_exercise_next" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/div_exercise_miss"
        android:layout_width="@dimen/tipBox_width"
        android:layout_height="@dimen/tipBox_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shadow_message_miss"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txtMiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/tipBox_margin"
            android:text="@string/title_exercise_miss"
            android:textColor="@color/miss"
            android:textSize="@dimen/textsize_item_L"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_tip_miss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtMiss"
            android:layout_marginLeft="@dimen/tipBox_margin"
            android:textColor="@color/text_miss"
            android:textSize="@dimen/textsize_item" />

        <Button
            android:id="@+id/button_next_miss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/tipBox_margin"
            android:background="@drawable/shadow_button_message"
            android:text="@string/button_exercise_next" />

    </RelativeLayout>

</RelativeLayout>